app/src/main/java/com/example/mviexample/data/error/ErrorApiType.kt
package com.example.mviexample.data.error

enum class ErrorApiType(val message: String) {
    UNAUTHORIZED("not_authorized")
}